<resources>
    <string name="app_name">spark</string>
    <string name="app_name_cn">先安一网通</string>
    <string name="about_title">公司官网：</string>
    <string name="about_content">%1$s由江苏先安科技有限公司设计开发，旨在为用户提供一个安全可信的移动安全终端，%1$s提供了基于PKI技术的数字证书服务， 使得用户可以像在PC电脑上一样在移动终端使用数字证书。</string>
    <string name="copyright">copyright @2014-2015 江苏先安科技有限公司\nAll rights reserved.</string>
    <string name="button_certificate_check">验证证书</string>
    <string name="button_login">登录</string>
    <string name="button_login_certificate">数字证书登录</string>
    <string name="button_open">打开</string>
    <string name="button_reg">注册</string>
    <string name="button_qrcode_unpressed">扫描登录</string>
    <string name="button_qrcode_cancel">退出扫描</string>
    <string name="button_qrcode_pressed">扫描中</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="button_save">保存设置</string>
    <string name="button_revoke">撤销</string>
    <string name="button_pending_cancel">取消申请</string>
    <string name="button_pending_apply">重新申请</string>
    <string name="button_pending_renew">申请续费</string>
    <string name="button_appdetail_drawback">删除应用</string>
    <string name="button_apply">申请</string>
    <string name="button_buy">开通</string>
    <string name="button_app_open">开通</string>
    <string name="button_account_exit">退出登录</string>
    <string name="button_certificate_private_match">匹配私钥</string>
    <string name="button_certificate_nickname_change">编辑别名</string>
    <string name="button_certificate_delay">延期证书</string>
    <string name="button_certificate_backup">备份</string>
    <string name="button_certificate_recover">恢复</string>
    <string name="button_data_encrypt">立即加密</string>
    <string name="button_data_decrypt">立即解密</string>
    <string name="button_data_signature">立即签名</string>
    <string name="button_certificate_issue">签发证书</string>
    <string name="button_certificate_import">下载证书</string>
    <string name="button_main_main_common_none">立即添加</string>
    <string name="button_main_certificate_syn">立即同步</string>
    <string name="button_certificate_delete">删除证书</string>
    <string name="hint_captcha">验证码</string>
    <string name="hint_login_account">用户名</string>
    <string name="hint_login_password">密码</string>
    <string name="hint_reg_confirmpassword">确认密码</string>
    <string name="hint_login_pin">请输入PIN码</string>
    <string name="label_noAccount">没有帐号?</string>
    <string name="label_appdetail_description">应用描述</string>
    <string name="label_appdetail_url">URL</string>
    <string name="label_appdetail_history">应用访问历史记录</string>
    <string name="label_appdetail_morehistory">更多历史记录</string>
    <string name="label_appdetail_watching">查看</string>
    <string name="label_moreapps">更多应用</string>
    <string name="label_myappcommon">常用应用</string>
    <string name="label_forgetpassword">忘记密码?</string>
    <string name="label_captcha">输入下图验证码</string>
    <string name="label_captcha_sms">请输入短信验证码</string>
    <string name="label_appapproved">已开通应用</string>
    <string name="label_details">详情</string>
    <string name="label_authlevel">自动授权</string>
    <string name="label_appdetail_ca">已支持证书机构</string>
    <string name="label_appdetail_drawback">删除</string>
    <string name="label_appdetail_term">条款与条件></string>
    <string name="label_appdetail_lasthistory">最近访问</string>
    <string name="label_drawback_reason">退款理由</string>
    <string name="label_account_about">关于</string>
    <string name="label_account_update">检查更新</string>
    <string name="label_avatar">头像</string>
    <string name="label_background">背景</string>
    <string name="label_nickname">昵称</string>
    <string name="label_sex">性别</string>
    <string name="label_email">邮箱</string>
    <string name="label_address">地址</string>
    <string name="label_account_password">帐号密码</string>
    <string name="label_phonenumber">手机号</string>
    <string name="label_validate">每次登陆时验证手机号</string>
    <string name="label_synch">每次同步时备份私钥</string>
    <string name="label_config_certificate_overdue">证书即将过期</string>
    <string name="label_config_app_overdue">应用即将过期</string>
    <string name="label_config_app_accept">收到其他用户转移的应用</string>
    <string name="label_config_down_network">使用2G/3G/4G网络下载</string>
    <string name="label_cache_clear">清除缓存</string>
    <string name="label_male">男</string>
    <string name="label_female">女</string>
    <string name="label_password_old">原密码</string>
    <string name="label_password_new">新密码</string>
    <string name="label_username">账号</string>
    <string name="label_password">密码</string>
    <string name="label_certificate_my">我的证书</string>
    <string name="label_certificate_pending">待签发证书</string>
    <string name="label_certificate_base_other">根证书与其他证书</string>
    <string name="label_certificate_name">证书名称</string>
    <string name="label_certificate_algorithm">公钥加密算法</string>
    <string name="label_certificate_status">证书状态</string>
    <string name="label_certificate_SN">证书序列号</string>
    <string name="label_certificate_theme">证书主题项</string>
    <string name="label_certificate_issue">证书颁发者</string>
    <string name="label_certificate_validity">证书有效期</string>
    <string name="label_certificate_thumbprint">证书指纹</string>
    <string name="label_certificate_nickname">证书别名</string>
    <string name="label_operations">其他操作</string>
    <string name="label_data_from">数据来源</string>
    <string name="label_data_encrypt">待加密数据</string>
    <string name="label_data_certificate">请选择证书</string>
    <string name="label_data_decrypt">待解密数据</string>
    <string name="label_data_signature">待签名数据</string>
    <string name="label_certificate_issue_alias">别名</string>
    <string name="label_certificate_issue_pin">PIN码</string>
    <string name="label_certificate_pin_old">原PIN码</string>
    <string name="label_certificate_pin_new">新PIN码</string>
    <string name="label_certificate_pin_confirm">确认PIN码</string>
    <string name="label_password_show">显示密码</string>
    <string name="title_mynotification">公告消息</string>
    <string name="title_appdetail">应用详情</string>
    <string name="title_certificate_detail">证书详情</string>
    <string name="title_reg">用户注册</string>
    <string name="title_appstore">应用中心</string>
    <string name="title_dialog_captcha">验证</string>
    <string name="title_apppending">待开通应用</string>
    <string name="title_appapproved">设置常用应用</string>
    <string name="title_dialog_appapply">应用认证信息</string>
    <string name="title_dialog_drawback">申请退款</string>
    <string name="title_account_safe">账号安全</string>
    <string name="title_account_config">设置</string>
    <string name="title_account_information">编辑资料</string>
    <string name="title_changepassword">修改密码</string>
    <string name="title_password_forget">密码找回</string>
    <string name="title_notification">消息中心</string>
    <string name="title_buy_confirm">确认开通</string>
    <string name="title_history_app">应用访问历史记录</string>
    <string name="title_certificate_base">根证书</string>
    <string name="title_certificate_other">其他证书</string>
    <string name="title_certificate_choose">选择证书</string>
    <string name="title_certificate_alias">修改别名</string>
    <string name="title_certificate_pin">修改PIN码</string>
    <string name="title_login_certificate">证书登陆</string>
    <string name="title_login_thirdparty">授权登陆</string>
    <string name="txt_reg">为了您的账户安全请使用真实邮箱或手机号码注册</string>
    <string name="txt_captcha">点击刷新验证码</string>
    <string name="txt_username_none">请输入用户名！</string>
    <string name="txt_password_none">请输入密码！</string>
    <string name="txt_confirmpassword_none">请输入确认密码！</string>
    <string name="txt_myappapproved">点选选择框,设置常用应用</string>
    <string name="txt_apppending">按住应用开通记录向左滑动可撤销申请记录</string>
    <string name="txt_authlevel">(申请授权时不再询问)</string>
    <string name="txt_login_qrcode">扫码登录</string>
    <string name="txt_login_username">打开应用</string>
    <string name="txt_account_default">设置昵称</string>
    <string name="txt_change">修改</string>
    <string name="txt_config_notification">消息通知设置</string>
    <string name="txt_password_old_null">请输入原密码!</string>
    <string name="txt_password_new_null">请输入新密码!</string>
    <string name="txt_password_different">两次输入密码不同!</string>
    <string name="txt_password_change_success">密码修改成功</string>
    <string name="txt_password_change_failed">密码修改失败</string>
    <string name="txt_password_forget_account_null">请输入帐号</string>
    <string name="txt_password_forget_email_null">请输入邮箱</string>
    <string name="txt_password_forget_success">邮件发送成功,请查收</string>
    <string name="txt_password_forget_failed">邮件发送失败,请稍后再试</string>
    <string name="txt_data_remember">记住我的选择</string>
    <string name="txt_error_data">获取数据失败,请稍后再试!</string>
    <string name="txt_certificate_overdue">证书已过期</string>
    <string name="txt_certificate_month">证书即将过期</string>
    <string name="txt_certificate_alias">别名:</string>
    <string name="txt_certificate_notafter">到期</string>
    <string name="txt_certificate_issue_noalias">请输入别名!</string>
    <string name="txt_certificate_issue_nopin">请输入PIN码!</string>
    <string name="txt_certificate_issue_nopin_confirm">请输入确认PIN码!</string>
    <string name="txt_certificate_issue_confirm_faild">两次PIN码输入不一致!</string>
    <string name="txt_login_certificate_none">暂无可用证书</string>
    <string name="txt_scanqrcode_confirm">是否登录</string>
    <string name="txt_scanqrcode_invalidcode">无效的二维码</string>
    <string name="txt_title_login_thirdparty_user">您当前登陆的账号为\n%s\n是否使用其他账号登陆</string>
    <string name="txt_verifylevel_error">获取验证方式失败,请稍后再试!</string>
    <string name="txt_thirdparty_invalidapp">获取应用信息失败</string>
    <string name="txt_main_main_common_add">您还未添加任何一个常用应用APP</string>
    <string name="txt_main_main_none">您可添加常用应用APP做快捷方式，方便操作</string>
    <string name="txt_main_main">您可添加更多的常用应用APP，方便操作</string>
    <string name="txt_main_certificate">您第一次登陆该设备,请立即同步证书</string>
    <string name="txt_certificate_other_null">您还没有相关证书</string>
    <string name="txt_network">网络状态异常,请稍后再试!</string>
    <string name="txt_app_apply_input">请输入认证信息!</string>
    <string name="txt_app_delete_title">确定要删除这个应用吗， 应用被删除后， 如果希望再次使用，您需要再次申请开通本应用。</string>
    <string name="txt_portal_title"><u>请选择一网通平台</u></string>
    <string name="scanqrcode_certificate">该应用仅支持证书登陆</string>
    <string name="scanqrcode_account">该应用仅支持用户名登陆</string>
    <string name="standalonelogin_account_invalidaccount">用户名不能为空</string>
    <string name="standalonelogin_account_invalidpassword">密码不能为空</string>
    <string name="standalonelogin_account_invalidcaptcha">验证码不能为空</string>
    <string name="standalonelogin_certificate_noitem">暂无可用证书</string>
    <string name="standalonelogin_certificate_select">请选择证书</string>
    <string name="standalonelogin_certificate_pin">请输入PIN码</string>
    <string name="standalonelogin_certificate_invalidcertificate">证书不能为空</string>
    <string name="standalonelogin_certificate_invalidpin">PIN码不能为空</string>
    <string name="certificatefragment_certificate_renew_invalidpin">PIN码错误,无法更新证书</string>
    <string name="keyboard_finish">收起</string>
    <string name="button_refresh">连接蓝牙设备</string>
    <string name="bluetooth_wait_connect">请打开蓝牙设备，等待连接</string>
    <string name="label_certificate_keyusage">密钥用法</string>
    <string name="label_certificate_keyusage_signature">签名</string>
    <string name="label_certificate_keyusage_encrypt">加密</string>
    <string name="label_certificate_single">单</string>
    <string name="label_certificate_double">双</string>
    <string name="view_expense">查看我的报销单</string>
    <string name="view_approval_expense">查看待审批报销单</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="sure">确定</string>
    <string name="verify_code">公司邀请码:</string>
    <string name="name">姓名</string>
    <string name="tel">手机号</string>
    <string name="id_no">身份证号</string>
    <string name="reg_cert">注册证书</string>
    <string name="forget_psw">忘记密码</string>
</resources>