<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="vertical" android:gravity="center_horizontal"
                  android:background="@drawable/background_dialog" android:layout_gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/title_certificate_alias" android:textSize="@dimen/text_size_header"
                  android:textColor="@color/black" android:layout_marginTop="15dp"
                  android:layout_marginBottom="30dp"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:gravity="center_vertical"
                      android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                      android:layout_marginBottom="10dp">
            <TextView android:layout_width="60dp" android:layout_height="wrap_content"
                      android:textSize="@dimen/text_size_normal" android:textColor="@color/black"
                      android:text="@string/label_certificate_issue_alias" android:layout_marginRight="7dp"/>
            <EditText android:layout_width="171dp" android:layout_height="20dp"
                      android:background="@drawable/background_dialog_input"
                      android:id="@+id/dialog_certificate_alias_input" android:singleLine="true"
                      android:textSize="@dimen/text_size_normal" android:paddingLeft="6dp"
                      android:paddingRight="6dp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="250dp" android:layout_height="30dp"
                      android:orientation="horizontal" android:layout_marginTop="18dp"
                      android:layout_marginBottom="20dp" android:layout_marginLeft="15dp"
                      android:layout_marginRight="15dp">
            <Button android:layout_width="100dp" android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_normal" android:textColor="@color/white"
                    android:text="@string/button_cancel" android:id="@+id/dialog_certificate_alias_cancel"
                    android:background="@drawable/button_cancel"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_weight="1"/>
            <Button android:layout_width="100dp" android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_normal" android:textColor="@color/white"
                    android:text="@string/button_ok" android:id="@+id/dialog_certificate_alias_ok"
                    android:background="@drawable/button_reg_reg"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>