<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical" android:gravity="center_horizontal"
                      android:background="@drawable/background_dialog" android:layout_gravity="center">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/title_certificate_pin" android:textSize="@dimen/text_size_header"
                      android:id="@+id/dialog_certificate_pin_title"
                      android:textColor="@color/black" android:layout_marginTop="15dp"
                      android:layout_marginBottom="20dp"/>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal" android:gravity="center_vertical"
                          android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                          android:layout_marginBottom="10dp">
                <TextView android:layout_width="80dp" android:layout_height="wrap_content"
                          android:textSize="@dimen/text_size_normal" android:textColor="@color/black"
                          android:text="@string/label_certificate_pin_old"
                          android:id="@+id/dialog_certificate_pin_old_label" android:layout_marginRight="7dp"/>
                <EditText android:layout_width="171dp" android:layout_height="20dp"
                          android:background="@drawable/background_dialog_input"
                          android:id="@+id/dialog_certificate_pin_old" android:singleLine="true"
                          android:textSize="@dimen/text_size_normal" android:paddingLeft="6dp"
                          android:paddingRight="6dp" android:password="true"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal" android:gravity="center_vertical"
                          android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                          android:layout_marginBottom="10dp">
                <TextView android:layout_width="80dp" android:layout_height="wrap_content"
                          android:textSize="@dimen/text_size_normal" android:textColor="@color/black"
                          android:text="@string/label_certificate_pin_new"
                          android:id="@+id/dialog_certificate_pin_new_label" android:layout_marginRight="7dp"/>
                <EditText android:layout_width="171dp" android:layout_height="20dp"
                          android:background="@drawable/background_dialog_input"
                          android:id="@+id/dialog_certificate_pin_new" android:singleLine="true"
                          android:textSize="@dimen/text_size_normal" android:paddingLeft="6dp"
                          android:paddingRight="6dp" android:password="true"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal" android:gravity="center_vertical"
                          android:layout_marginLeft="15dp" android:layout_marginRight="15dp">
                <TextView android:layout_width="80dp" android:layout_height="wrap_content"
                          android:textSize="@dimen/text_size_normal" android:textColor="@color/black"
                          android:text="@string/label_certificate_pin_confirm"
                          android:id="@+id/dialog_certificate_pin_confirm_label" android:layout_marginRight="7dp"/>
                <EditText android:layout_width="171dp" android:layout_height="20dp"
                          android:background="@drawable/background_dialog_input"
                          android:id="@+id/dialog_certificate_pin_confirm" android:singleLine="true"
                          android:textSize="@dimen/text_size_normal" android:paddingLeft="6dp"
                          android:paddingRight="6dp" android:password="true"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal" android:gravity="center"
                          android:layout_marginTop="10dp" android:id="@+id/dialog_certificate_pin_show">
                <ImageView android:layout_width="15dp" android:layout_height="15dp"
                           android:layout_marginRight="5dp" android:id="@+id/dialog_certificate_pin_show_icon"
                           android:background="@drawable/background_myappapproved_checkbox"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="@dimen/text_size_small" android:text="@string/label_password_show"
                          android:id="@+id/dialog_certificate_pin_show_text" android:textColor="@color/lightgray"/>
            </LinearLayout>
            <LinearLayout android:layout_width="250dp" android:layout_height="30dp"
                          android:orientation="horizontal" android:layout_marginTop="10dp"
                          android:layout_marginBottom="20dp" android:layout_marginLeft="15dp"
                          android:layout_marginRight="15dp">
                <Button android:layout_width="100dp" android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_normal" android:textColor="@color/white"
                        android:text="@string/button_cancel" android:id="@+id/dialog_certificate_pin_cancel"
                        android:background="@drawable/button_cancel"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:layout_weight="1"/>
                <Button android:layout_width="100dp" android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_normal" android:textColor="@color/white"
                        android:text="@string/button_ok" android:id="@+id/dialog_certificate_pin_ok"
                        android:background="@drawable/button_reg_reg"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.inputmethodservice.KeyboardView
                android:id="@+id/keyboard_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:keyTextColor="@color/white"
                android:visibility="gone"/>
    </RelativeLayout>
</LinearLayout>